objects/Underwriting_Record__c.object
<CustomObject>
    <fields>
        <fullName>Digital_Health_Engagement_Sold_Op_Gain__c</fullName>
        <formula>Digital_Health_Engagement_Sold_Rev__c - Digital_Health_Engagement_Sold_Exp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Health Engagement Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Digital_Health_Engagement_Sold_Rev__c</fullName>
        <label>Digital Health Engagement Sold Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Guarantee_Dollars_at_Risk__c</fullName>
        <description>The annual dollar amount put at risk on the discount guarantee.</description>
        <inlineHelpText>The annual dollar amount put at risk on the discount guarantee.</inlineHelpText>
        <label>Discount Guarantee Dollars at Risk</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Guarantee_Type__c</fullName>
        <label>Discount Guarantee Type:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Total Discount</fullName>
                </value>
                <value>
                    <fullName>In Network Discount</fullName>
                </value>
                <value>
                    <fullName>In Network Utilization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Share_Arrangement_Sold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount Share Arrangement Sold? </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Share_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if quote includes discount sharing.</inlineHelpText>
        <label>Discount Share Quoted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disease_Management_Current_Expense__c</fullName>
        <label>Disease Management Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disease_Management_Current_Op_Gain__c</fullName>
        <formula>Disease_Management_Current_Revenue__c - Disease_Management_Current_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disease Management Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disease_Management_Current_Revenue__c</fullName>
        <label>Disease Management Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disease_Management_Sold_Expense__c</fullName>
        <label>Disease Management Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disease_Management_Sold_Op_Gain__c</fullName>
        <formula>Disease_Management_Sold_Revenue__c - Disease_Management_Sold_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disease Management Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disease_Management_Sold_Revenue__c</fullName>
        <label>Disease Management Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Year</fullName>
                </value>
                <value>
                    <fullName>Lifetime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_of_Guarantee__c</fullName>
        <description>Select the Duration of the guarantee</description>
        <inlineHelpText>Select the Duration of the guarantee</inlineHelpText>
        <label>Duration of Guarantee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAP_Fee__c</fullName>
        <label>EAP Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Name__c</fullName>
        <label>Exchange Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BL=Anthem Health Marketplace (Bloom)</fullName>
                </value>
                <value>
                    <fullName>CE = Corporate Health Exchange (AON Hewitt)</fullName>
                </value>
                <value>
                    <fullName>MM = Mercer Marketplace (Mercer)</fullName>
                </value>
                <value>
                    <fullName>OE = OneExchange (TowersWatson)</fullName>
                </value>
                <value>
                    <fullName>RO = RightOpt (Buck Consultants)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange_Quoted__c</fullName>
        <label>Exchange Quoted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange_Sold__c</fullName>
        <label>Exchange Sold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Loss_Ratio_New_Business__c</fullName>
        <label>Expected Loss Ratio New Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Loss_Ratio_Renewal__c</fullName>
        <label>Expected Loss Ratio Renewal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>External_Rx_Integration_Charge__c</fullName>
        <inlineHelpText>Enter if no Anthem Rx</inlineHelpText>
        <label>External Rx Integration Charge</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FI_Benefit_Change__c</fullName>
        <label>FI Benefit Change %</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FI_Current_Rate_PCPM__c</fullName>
        <label>FI Current Rate PCPM</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FI_Expected_Final_Rate_Action__c</fullName>
        <formula>FI_Prop_Rate_Action_before_Buydowns__c  +  FI_Benefit_Change__c  +  FI_UW_Discretion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FI Expected Final Rate Action %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FI_Extra_Margin__c</fullName>
        <formula>FI_Pct_of_Formula_Sold__c - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FI Extra Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FI_Final_Rate_PCPM__c</fullName>
        <formula>FI_Current_Rate_PCPM__c  *  (1 +  FI_Expected_Final_Rate_Action__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FI Final Rate PCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FI_Formula_Rate_Action__c</fullName>
        <label>FI Formula Rate Action %</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FI_Formula_Rate_PCPM__c</fullName>
        <label>FI Formula Rate PCPM</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FI_Initial_Quoted_Rate_PCPM__c</fullName>
        <label>FI Initial Quoted Rate PCPM</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FI_Pct_of_Formula_Sold__c</fullName>
        <formula>FI_Initial_Quoted_Rate_PCPM__c / FI_Formula_Rate_PCPM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FI % of Formula Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FI_Prop_Rate_Action_before_Buydowns__c</fullName>
        <label>FI Prop Rate Action % before Buydowns</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FI_REP_Factor_Percentage__c</fullName>
        <description>US29389</description>
        <formula>Opportunity__r.FI_REP_Factor_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FI REP Factor Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FI_Renewal_Extra_Margin__c</fullName>
        <formula>FI_Expected_Final_Rate_Action__c  -  FI_Benefit_Change__c  -  FI_Formula_Rate_Action__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FI Renewal Extra Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FI_UW_Discretion__c</fullName>
        <label>FI UW Discretion %</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fiduciary_Charge__c</fullName>
        <label>Fiduciary Charge</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Guarantee__c</fullName>
        <inlineHelpText>Use for Network Discount Guarantees</inlineHelpText>
        <label>% Financial Guarantee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Flex_Deviation_from_Standard_Pricing__c</fullName>
        <label>Flex Deviation from Standard Pricing</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flex_Pricing_Sold__c</fullName>
        <inlineHelpText>Required entry if &quot;Flex Pricing Used&quot; is Yes</inlineHelpText>
        <label>Flex Pricing Sold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flex_Renewal_Type__c</fullName>
        <label>Flex Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Renewal, not out to bid, growth</fullName>
                </value>
                <value>
                    <fullName>Active renewal, not out to bid, no growth</fullName>
                </value>
                <value>
                    <fullName>Active renewal, out to bid, growth</fullName>
                </value>
                <value>
                    <fullName>Active renewal, out to bid, no growth</fullName>
                </value>
                <value>
                    <fullName>Guaranteed renewal, out to bid, growth</fullName>
                </value>
                <value>
                    <fullName>Guaranteed renewal, out to bid, no growth</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flex_Total_Profit__c</fullName>
        <label>Flex Total Profit</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_Annual_Revenue__c</fullName>
        <label>Formula Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fully_Insured_Rate_Cap_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The first year fully insured renewal is guaranteed to be no greater than xx%.</description>
        <inlineHelpText>The first year fully insured renewal is guaranteed to be no greater than xx%.</inlineHelpText>
        <label>Fully Insured Rate Cap Offered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <label>Funding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>MCS</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>JAA</fullName>
                </value>
                <value>
                    <fullName>ABF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Out_To_Bid__c</fullName>
        <label>Group Out To Bid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantee_Length_in_Months__c</fullName>
        <label>Guarantee Length in Months</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Change_Year_2__c</fullName>
        <label>Guaranteed Change % Year 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Change_Year_3__c</fullName>
        <label>Guaranteed Change % Year 3</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Change_Year_4__c</fullName>
        <label>Guaranteed Change % Year 4</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Renewal_Date_Year_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guaranteed Renewal Date Year 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Renewal_Date_Year_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guaranteed Renewal Date Year 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Renewal_Date_Year_4__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guaranteed Renewal Date Year 4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Guarantee__c</fullName>
        <label>% Implementation Guarantee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>In_Network_Position_vs_Average__c</fullName>
        <label>In Network Position vs. Average</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Network_Position_vs_BIC__c</fullName>
        <label>In Network Position vs. BIC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Network_Shared_Savings_Cur_Op_Gain__c</fullName>
        <formula>In_Network_Shared_Savings_Cur_Rev__c - 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In-Network Shared Savings Cur Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Network_Shared_Savings_Cur_Rev__c</fullName>
        <label>In-Network Shared Savings Cur Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Network_Shared_Savings_Sold_Op_Gain__c</fullName>
        <formula>In_Network_Shared_Savings_Sold_Rev__c - 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In-Network Shared Savings Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Network_Shared_Savings_Sold_Rev__c</fullName>
        <label>In-Network Shared Savings Sold Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Network_Shared_Savings_Sold__c</fullName>
        <label>In-Network Shared Savings Sold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Proposed_Op_Gain_Change_PCPM__c</fullName>
        <label>Initial Proposed Op Gain Change PCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integrated_Health_Model_Current_Expense__c</fullName>
        <label>Integrated Health Model Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integrated_Health_Model_Current_Op_Gain__c</fullName>
        <formula>Integrated_Health_Model_Current_Revenue__c - Integrated_Health_Model_Current_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integrated Health Model Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integrated_Health_Model_Current_Revenue__c</fullName>
        <label>Integrated Health Model Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integrated_Health_Model_Sold_Expense__c</fullName>
        <label>Integrated Health Model Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integrated_Health_Model_Sold_Op_Gain__c</fullName>
        <formula>Integrated_Health_Model_Sold_Revenue__c - Integrated_Health_Model_Sold_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integrated Health Model Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integrated_Health_Model_Sold_Revenue__c</fullName>
        <label>Integrated Health Model Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_owner_the_logged_in_user__c</fullName>
        <formula>IF(Underwriter_Name__c= $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is owner the logged in user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>List Carrier Name if Other BCBS or TPA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Ratio_Cap_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was a loss ratio cap offered?</description>
        <inlineHelpText>Was a loss ratio cap offered?</inlineHelpText>
        <label>Loss Ratio Cap Offered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Amount_at_Risk__c</fullName>
        <formula>Operational_Guarantee__c  +  Implementation_Guarantee__c  +  Financial_Guarantee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated Field</inlineHelpText>
        <label>% Max Amount at Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Increase_Year_2__c</fullName>
        <description>The second year fully insured renewal is guaranteed to be no greater than xx%.</description>
        <inlineHelpText>The second year fully insured renewal is guaranteed to be no greater than xx%.</inlineHelpText>
        <label>Maximum Increase Year 2?</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Members__c</fullName>
        <inlineHelpText>Should match the retention model</inlineHelpText>
        <label>Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_to_Contracts_Ratio__c</fullName>
        <formula>Members__c  /  Contracts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Members to Contracts Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mercer_Health_Advantage_Current_Expense__c</fullName>
        <label>Mercer Health Advantage Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mercer_Health_Advantage_Current_Op_Gain__c</fullName>
        <formula>Mercer_Health_Advantage_Current_Revenue__c - Mercer_Health_Advantage_Current_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mercer Health Advantage Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mercer_Health_Advantage_Current_Revenue__c</fullName>
        <label>Mercer Health Advantage Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mercer_Health_Advantage_Sold_Expense__c</fullName>
        <label>Mercer Health Advantage Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mercer_Health_Advantage_Sold_Op_Gain__c</fullName>
        <formula>Mercer_Health_Advantage_Sold_Revenue__c - Mercer_Health_Advantage_Sold_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mercer Health Advantage Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mercer_Health_Advantage_Sold_Revenue__c</fullName>
        <label>Mercer Health Advantage Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_PI_PMPM__c</fullName>
        <label>Min. PI PMPM</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NCN_Profit__c</fullName>
        <label>NCN Profit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Access_Current_Expense__c</fullName>
        <label>Network Access Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Network_Access_Sold_Expense__c</fullName>
        <label>Network Access Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Network_Expense_Methodology__c</fullName>
        <label>Network Expense Methodology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Billed to Client</fullName>
                </value>
                <value>
                    <fullName>Combination</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Renewal_Date__c</fullName>
        <description>UW Next Renewal Date Renewals</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OON_Shared_Savings_Current_Op_Gain__c</fullName>
        <formula>OON_Shared_Savings_Current_Revenue__c - 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Shared Savings Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OON_Shared_Savings_Current_Revenue__c</fullName>
        <label>OON Shared Savings Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OON_Shared_Savings_Sold_Op_Gain__c</fullName>
        <formula>OON_Shared_Savings_Sold_Revenue__c - 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Shared Savings Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OON_Shared_Savings_Sold_Revenue__c</fullName>
        <label>OON Shared Savings Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Operational_Guarantee__c</fullName>
        <label>% Operational Guarantee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Underwriting Records</relationshipLabel>
        <relationshipName>Underwriting_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Profits__c</fullName>
        <label>Other Profits</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Programs_Current_Expense__c</fullName>
        <label>Other Programs Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Programs_Current_Op_Gain__c</fullName>
        <formula>Other_Programs_Current_Revenue__c - Other_Programs_Current_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Programs Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Programs_Current_Revenue__c</fullName>
        <label>Other Programs Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Programs_Sold_Expense__c</fullName>
        <label>Other Programs Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Programs_Sold_Op_Gain__c</fullName>
        <formula>Other_Programs_Sold_Revenue__c - Other_Programs_Sold_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Programs Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Programs_Sold_Revenue__c</fullName>
        <label>Other Programs Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PI_Fee_Credit_PCPM__c</fullName>
        <inlineHelpText>Guidance is $1.00 PMPM</inlineHelpText>
        <label>PI Fee Credit PCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PI_GROSS_Revenue_PCPM__c</fullName>
        <inlineHelpText>Book of business assumption is $2.57 PMPM</inlineHelpText>
        <label>PI GROSS Revenue PCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PI_Guarantee__c</fullName>
        <label>PI Guarantee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PI_OpGain_PCPM__c</fullName>
        <inlineHelpText>Book of business assumption is $1.57 PMPM</inlineHelpText>
        <label>PI OpGain PCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Performance_Guarantee_Dollars_at_Risk__c</fullName>
        <description>The annual dollar amount put at risk for all performance guarantees other than discount.</description>
        <inlineHelpText>The annual dollar amount put at risk for all performance guarantees other than discount.</inlineHelpText>
        <label>Performance Guarantee Dollars at Risk</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Pricing_Strategy_Cur_Op_Gain__c</fullName>
        <label>Pharmacy Pricing Strategy Cur Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Pricing_Strategy_Sold_Op_Gain__c</fullName>
        <label>Pharmacy Pricing Strategy Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Profit__c</fullName>
        <formula>Rx_Operating_Gain_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pharmacy Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Rebate_Credit_Current_Revenue__c</fullName>
        <label>Pharmacy Rebate Credit Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>